Bug 479713 - tablet output follows active screen not respected on desktop
Summary: tablet output follows active screen not respected on desktop
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: 5.90.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: multiscreen, qt6
Depends on:
Blocks:
 
Reported: 2024-01-13 00:11 UTC by fanzhuyifan
Modified: 2024-02-23 14:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fanzhuyifan 2024-01-13 00:11:42 UTC
STEPS TO REPRODUCE
1. Set up multiple screens
2. In window behaviors, set active screen follows mouse
3. Plug in tablet
4. For tablet settings, set output follows active screen
5. Close all windows to get an empty desktop
6. Use mouse to click on screen A
7. Use mouse to move cursor to screen B
8. Use tablet to move cursor

OBSERVED RESULT
cursor moves on screen A.

EXPECTED RESULT
Cursor should move on screen B.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Kernel Version: 6.7.0-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i9-13900H
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus G16 GU603VV_GU603VV
System Version: 1.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-02-22 16:10:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5279
Comment 2 Marco Martin 2024-02-23 09:12:00 UTC
Git commit 9da0b8543fbf999b78957563a7c283f541147a6d by Marco Martin.
Committed on 23/02/2024 at 09:01.
Pushed by mart into branch 'master'.

Send tablet input to active screen

Try to send the tablet input to the configured screen for the tablet if any,
otherwise always send it to the active screen, not the screen of the active window
which is very confusing

M  +0    -3    src/backends/libinput/connection.cpp

https://invent.kde.org/plasma/kwin/-/commit/9da0b8543fbf999b78957563a7c283f541147a6d
Comment 3 Marco Martin 2024-02-23 14:42:32 UTC
Git commit 111cd842f1d41c1ee0c9297eb2c796311433883c by Marco Martin.
Committed on 23/02/2024 at 11:52.
Pushed by mart into branch 'Plasma/6.0'.

Send tablet input to active screen

Try to send the tablet input to the configured screen for the tablet if any,
otherwise always send it to the active screen, not the screen of the active window
which is very confusing

M  +0    -3    src/backends/libinput/connection.cpp

https://invent.kde.org/plasma/kwin/-/commit/111cd842f1d41c1ee0c9297eb2c796311433883c